# qdtlv3

./: .gitignore  README.md  app.py  mobility_runtime.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/hotspots/: barcelona_mobility_hotspots.csv
data/scenarios/: scenario_library.json  scenario_library_high_complexity_v2.json  scenario_meta.json
src/mobility_os/domain/: models.py  twins.py
src/mobility_os/io/: hotspot_repo.py
src/mobility_os/orchestration/: hybrid.py
src/mobility_os/runtime/: benchmark.py  runtime.py
src/mobility_os/scenarios/: engine.py  loader.py  schema.py
src/mobility_os/solvers/: classical.py  quantum_mock.py
src/mobility_os/ui/: app.py  charts.py  components.py  maps.py  simulation.py
src/mobility_os/ui/tabs/: __init__.py  audit.py  map_layers.py  overview.py  signals.py  simulation.py  storyboard.py  twins.py
tests/: test_benchmark.py  test_orchestrator.py  test_runtime.py  test_scenarios.py
