[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qdtl2"
version = "0.2.0"
description = "Refactored base for a hybrid classical-quantum mobility control room"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.38",
    "pandas>=2.2",
    "numpy>=1.26",
    "plotly>=5.24",
    "pydeck>=0.9",
    "pydantic>=2.8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
